--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>My Input Component</title>
     <!--<link rel="stylesheet" href="style.css">-->
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@3.2.6"></script>
 </head>
 
 <body>
